--- a/Anotherone/Index.html
+++ b/Anotherone/Index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Valorant - Agents page concept design</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/css/style.css">
+	<title>Valorant - Agents page concept design</title>
 </head>
+
 <body>
-    <section class="back">
-        ghdjfghkdfhgkdhfgkdjghkjdfhgkhdfgkjh
-    </section>
+	<div class="container">
+		<section class="main">
+			<div class="menu">
+				<ul>
+					<li>ГЛАВНАЯ</li>
+					<li>О ТЕАТРЕ</li>
+					<li>НАШИ ПОСТАНОВКИ</li>
+					<li>ПАРТРЕНРЫ ТЕАТРА</li>
+					<li>КОНТАКТЫ</li>
+					<li>+7 495 123-45-67</li>
+				</ul>
+			</div>
+
+
+
+		</section>
+	</div>
 </body>
+
 </html>
